# Data-Aware-RAG

./: .gitignore  .pre-commit-config.yaml  CORPUS_READY.md  README.md  STAGE10_MEMORY_SUMMARY.md  STAGE3_IMPLEMENTATION_SUMMARY.md  STAGE5_EVALUATION_SUMMARY.md  STAGE6_STREAMLIT_SUMMARY.md  STAGE7_COMPLETION_SUMMARY.md  STAGE7_PRODUCTION_SUMMARY.md  STAGE8_CHAT_SUMMARY.md  STAGE9_STREAMING_SUMMARY.md  STREAMLIT_APP_README.md  chat_with_corpus.py  demo_rag_pipeline.py  demo_stage4_orchestration.py  production_example.py  production_stage7_example.py  pyproject.toml  quick_check.py  simple_ingest.py  streamlit_app.py
app/: __init__.py  components.py  state.py  ui_theme.css
app/adapters/: __init__.py  ollama_generator.py
app/pages/: 1_🏗️_Corpus.py  2_🤖_Ask.py  3_📈_Metrics.py  4_💬_Chat.py  5_🧠_Memory.py
rag_papers/: __init__.py
rag_papers/api/: __init__.py  chat.py  main.py  memory.py  schemas.py
rag_papers/compute/: __init__.py  table_ops.py
rag_papers/config/: __init__.py  settings.py
rag_papers/eval/: __init__.py  datasets.py  metrics.py  reporter.py  runner.py  schemas.py  telemetry.py
rag_papers/generation/: __init__.py  enhanced_prompts.py  generator.py  ollama_generator.py  production_llm.py  prompts.py  verifier.py
rag_papers/index/: __init__.py  build_bm25.py  build_vector_store.py  contextualize.py  interfaces.py
rag_papers/ingest/: __init__.py  chunker.py  marker_run.py  models.py  normalize_tables.py  parsers.py  quality.py  service.py
rag_papers/memory/: __init__.py  integrate.py  policy.py  (+4 more)
scripts/: __init__.py  rag_batch.py  rag_cache.py  rag_eval.py  rag_ingest.py  rag_serve.py
tests/: conftest.py
(+56 files in other folders)
